--- a/WEB GUNUNG CIREMAI ANGGA NUGRAHA 241410106O/index.html
+++ b/WEB GUNUNG CIREMAI ANGGA NUGRAHA 241410106O/index.html
@@ -186,15 +186,21 @@
         </div>
     </section>
 
-    <!-- VIDEO SECTION -->
+<!-- VIDEO SECTION -->
     <section class="py-16 px-6 bg-white dark:bg-slate-900 transition-colors duration-300">
         <div class="container mx-auto max-w-5xl">
             <h2 class="text-2xl md:text-3xl font-bold mb-8 text-center">Video Eksklusif</h2>
-            <diqav class="relative w-full overflow-hidden rounded-2xl shadow-2xl" style="padding-top: 56.25%;">
-                <!-- Embed YouTube Generic -->
-                <iframe class="absolute top-0 left-0 w-full h-full" src="https://www.youtube.com/embed\
-                dm-K77VryUM" title="TAMAN NASIONAL GUNUNG CIREMAI - AKU CIREMAI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </diqav>
+            <div class="relative w-full overflow-hidden rounded-2xl shadow-2xl" style="padding-top: 56.25%;">
+                <iframe 
+                    class="absolute top-0 left-0 w-full h-full" 
+                    src="https://www.youtube.com/embed/dm-K77VryUM" 
+                    title="TAMAN NASIONAL GUNUNG CIREMAI - AKU CIREMAI" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    allowfullscreen>
+                </iframe>
+                
+            </div>
         </div>
     </section>
 
